--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,13 @@
     <string name="buy_text">Buy</string>
     <string name="overview_text">Overview</string>
     <string name="error_text">You are Not Connected to the Internet</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="try_again">Try Again</string>
+    <string name="back_to_home">Back To Home</string>
+    <string name="success_text">
+        Order Confirmation - Thanks for using your promo code “BK”\n
+        at In N’ Out! 20% discount applied to order #7954. Stay tuned\n
+        for more exciting discounts from us.</string>
 
 </resources>
